--- a/src/components/App/app.module.scss
+++ b/src/components/App/app.module.scss
@@ -1,4 +1,4 @@
-.app {
+.container {
   //display: grid;
   //grid-template-areas: "header header" "main main" "footer footer";
   //grid-template-rows: 75px 1fr 75px;
